--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes/question">Preguntas</a></span>
+    <span><a href="/author">Créditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -31,8 +32,8 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
+    <span><a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">¿Que es un Quiz?</a></span>
+    <span><a href="https://github.com/jcarlosmm/quiz" target="_blank">Quiz en GitHub</a></span>
   </footer>
 </div>
 </body>
