--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,8 @@
+<form method="get" action="quizes">
+  <label for="busq" class="rem">Buscar pregunta:</label>
+  <input type="text" id="busq" name="search" value=""/>
+  <button type="submit">Buscar</button>
+</form>
 <table>
 <% var i; for (i=0; i < quizes.length; i++) { %>
    <tr>
